# agh_compilers

./: .gitignore  LICENSE  README.md  go_scaner.c  go_scaner.h  helpers.c  helpers.h  makefile  notes.txt
go_parser/: .gdb_history  .gitignore  CMakeCache.txt  CMakeLists.txt  Go2LLVM.g4  Go2LLVMLexer.g4  Go2LLVMLexer.tokens  Go2LLVMParser.g4  Makefile  README.md  cmake_install.cmake  go_parser  go_parser.cbp  notes.txt  test.go  test.ll  tree.sh
go_parser/_minted-go2llvm_sprawozdanie/: EA6065F62FF1ED1C29A41A6D61BEEFC2AC85D26A53C9CB0F338CEAB68298F546.pygtex
go_parser/antlr_runtime_unix/lib/: libantlr4-runtime.so.4.7.1
go_parser/examples/: all.go  all.ll  rsa.go  small.go  small.ll
go_parser/sprawozdanie/: go2llvm_sprawozdanie.aux  go2llvm_sprawozdanie.tex
go_parser/sprawozdanie/_minted-go2llvm_sprawozdanie/: 1E132B9B919AC64A85907816187D4E93AC85D26A53C9CB0F338CEAB68298F546.pygtex  2247C09CE86BB841BC40E497886CEADBAC85D26A53C9CB0F338CEAB68298F546.pygtex
go_parser/src/: Go2LLVMError.cpp  Go2LLVMError.h  Go2LLVMMyVisitor.cpp  Go2LLVMMyVisitor.h  Helpers.cpp  Helpers.h  MyBasicBlock.h  VisitorDeclaration.cpp  VisitorExpression.cpp  VisitorFunction.cpp  VisitorOperand.cpp  VisitorStatement.cpp  VisitorTopLevel.cpp  go_parser.cpp
go_parser/src/exceptions/: Go2LLVMError.cpp  Go2LLVMError.h  Go2LLVMWarning.cpp  Go2LLVMWarning.h
go_parser/src/variables/: BasicVar.cpp  BasicVar.h  BoolVar.cpp  BoolVar.h  FloatVar.cpp  FloatVar.h  IntegerVar.cpp  IntegerVar.h  PointerVar.cpp  PointerVar.h  VarFactory.cpp  VarFactory.h  VoidVar.cpp  VoidVar.h
go_parser/src/visitors/: Go2LLVMMyVisitor.cpp  Go2LLVMMyVisitor.h  VisitorDeclaration.cpp  VisitorExpression.cpp  VisitorFunction.cpp  VisitorOperand.cpp  VisitorStatement.cpp  VisitorTopLevel.cpp
go_parser/tmp/: Go2LLVMLexer.interp  Go2LLVMLexer.java  Go2LLVMParser.interp  Go2LLVMParser.java  Go2LLVMParserBaseListener.java  Go2LLVMParserListener.java
go_scanner/: .gitignore  README.md  colors.css  go_highlighter.c  go_highlighter.h  go_scanner.c  go_scanner.h  helpers.c  helpers.h  main.c  makefile  test.go
